--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky"
-    
   },
   "author": "Ansar",
   "license": "ISC",
@@ -31,6 +30,8 @@
       "npm run lint:fix",
       "npm run formet:fix"
     ]
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
-
 }
