--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.7.0",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/node": "^20.14.11",
     "@types/winston": "^2.4.4",
     "eslint": "^8.57.0",
@@ -36,6 +37,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-errors": "^2.0.0",
     "ts-node": "^10.9.2",
     "winston": "^3.13.1"
   }
