--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "formet:fix": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest --watch --runInBand"
   },
   "author": "Ansar",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "@jest/globals": "^29.7.0",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.11",
+    "@types/supertest": "^6.0.2",
     "@types/winston": "^2.4.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1"
   },
