--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "winston": "^3.13.1"
   }
