--- a/package.json
+++ b/package.json
@@ -1,52 +1,59 @@
 {
-  "name": "auth-service-by-me",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/server.ts",
-    "formet:check": "prettier . --check",
-    "formet:fix": "prettier . --write",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepare": "husky",
-    "test": "jest --watch --runInBand"
-  },
-  "author": "Ansar",
-  "license": "ISC",
-  "devDependencies": {
-    "@eslint/js": "^9.7.0",
-    "@jest/globals": "^29.7.0",
-    "@types/eslint__js": "^8.42.3",
-    "@types/express": "^4.17.21",
-    "@types/http-errors": "^2.0.4",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.11",
-    "@types/supertest": "^6.0.2",
-    "@types/winston": "^2.4.4",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "3.3.3",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.1"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "npm run lint:fix",
-      "npm run formet:fix"
-    ]
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "http-errors": "^2.0.0",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
-    "winston": "^3.13.1"
-  }
+   "name": "auth-service-by-me",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
+      "formet:check": "prettier . --check",
+      "formet:fix": "prettier . --write",
+      "lint": "eslint .",
+      "lint:fix": "eslint . --fix",
+      "prepare": "husky",
+      "test": "jest --watch --runInBand",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "author": "Ansar",
+   "license": "ISC",
+   "devDependencies": {
+      "@eslint/js": "^9.7.0",
+      "@jest/globals": "^29.7.0",
+      "@types/eslint__js": "^8.42.3",
+      "@types/express": "^4.17.21",
+      "@types/http-errors": "^2.0.4",
+      "@types/jest": "^29.5.12",
+      "@types/node": "^16.11.10",
+      "@types/supertest": "^6.0.2",
+      "@types/winston": "^2.4.4",
+      "eslint": "^8.57.0",
+      "eslint-config-prettier": "^9.1.0",
+      "husky": "^9.0.11",
+      "jest": "^29.7.0",
+      "lint-staged": "^15.2.7",
+      "prettier": "3.3.3",
+      "supertest": "^7.0.0",
+      "ts-jest": "^29.2.2",
+      "ts-node": "10.9.1",
+      "typescript": "4.5.2",
+      "typescript-eslint": "^7.16.1"
+   },
+   "lint-staged": {
+      "*.ts": [
+         "npm run lint:fix",
+         "npm run formet:fix"
+      ]
+   },
+   "dependencies": {
+      "cross-env": "^7.0.3",
+      "dotenv": "^16.4.5",
+      "express": "^4.19.2",
+      "http-errors": "^2.0.0",
+      "nodemon": "^3.1.4",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.2",
+      "typeorm": "0.3.20",
+      "winston": "^3.13.1"
+   }
 }
