--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^16.11.10",
@@ -50,6 +51,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
     "nodemon": "^3.1.4",
     "pg": "^8.4.0",
