--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^16.11.10",
     "@types/supertest": "^6.0.2",
     "@types/winston": "^2.4.4",
@@ -53,6 +54,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
