--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/js": "^9.7.0",
     "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
@@ -34,6 +35,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
+    "mock-jwks": "^1.0.10",
     "prettier": "3.3.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.2",
@@ -49,12 +51,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "nodemon": "^3.1.4",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
