--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
+    "build":"tsc",
     "formet:check": "prettier . --check",
     "formet:fix": "prettier . --write",
     "lint": "eslint .",
